# fundamentos_python_puc

./: .env.exemple  README.md  pyproject.toml  requirements.txt
data/cache/: aqi_cache_exemplo.csv
data/reports/: relatorio_clientes.xlsx
exercicios_resolucoes/: api_airvisual.py  api_countries_handler.py  api_wather_key.py  db_handler.py  exercicio_03.py  exercicio_07.py
pagila/: docker-compose.yml
src/: main.py
src/api/: airvisual_api.py  countries_api.py
src/cache/: cache_handler.py
src/db/: db_handler.py
src/db/sql/: ex_01_clientes_mais_10_trasacoes.sql  ex_02_receita_bruta_cidade.sql  ex_03_quantidade_alugueis_pais.sql  ex_04_qtd_clientes_cidade.sql  ex_04_qtd_filmes_alugados.sql  ex_05_clientes_em_areas_criticas.sql  ex_06_receita_bruta_pais.sql  ex_07_tempo_medio_aluguel.sql  ex_08_perfil_clientes.sql  ex_09_export_excel.sql  ex_10_lista_cidades_cache_exemplo.sql
src/exercicios_resolucoes/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py
